# outreach-campaign

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_BRIEFING.md  CODE_REVIEW_COMPREHENSIVE.md  Claude_Code_Sessions.html  Codebase_Audit_Report.html  Competitive_Brief_Lemlist.html  DESIGN.md  Debug_Report.html  Design-Handoff-Specs.docx  Dockerfile  Dockerfile.dev  ENGINEERING_REVIEW_REPORT.md  FINAL_HANDOFF_Claude_Code 2.md  FINAL_HANDOFF_Claude_Code.md  Implementation_Plan_v2.md  Makefile  NEXT_STEPS.md  Outreach_Sequence_Plan.md  PRD_Outreach_Web_App.md  Platform_Assessment_Report.html  README.md  TODOS.md  Tech_Debt_Report.html  architecture-review.html  brand-voice-guidelines.md  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  tech-debt-report.html  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: index.py
data/newsletters/: 2026-02-24-test.md
docs/: PLAYBOOK.md
docs/plans/: 2026-02-24-outreach-campaign-system.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  queryKeys.ts
migrations/: 001_initial_schema.sql  002_web_app.sql
migrations/pg/: 001_initial_schema.sql  002_web_app.sql  003_adaptive_engine.sql  004_whatsapp_crm.sql  005_performance_indexes.sql  006_crm_pipeline.sql  007_schema_fixes.sql  008_additional_indexes.sql  009_crm_extensions.sql  010_performance_review.sql  011_crypto_research.sql  012_research_enhancements.sql  013_constraints_indexes.sql  014_multi_tenancy.sql  015_user_api_keys.sql  016_deep_research.sql  017_full_multi_tenancy.sql  018_add_completed_unsubscribed_status.sql  019_smart_import.sql  020_companies_unique_constraint.sql  021_channel_override.sql  022_async_import.sql  023_message_drafts.sql  024_cron_and_batch_send.sql  025_gdpr_deletion.sql  026_fund_signals.sql  027_composite_indexes.sql  028_fk_behavior_notes.sql  (+11 more)
outside-skills/: GS_outreach_example-metaworld.md  Outreach_GS_SKILL.md
scripts/: lint_tenancy.py  migrate_sqlite_to_pg.py
specs/: 00_EXECUTION_ORDER.md  01_PRODUCTION_HARDENING.md  02_SECURITY_AUTH.md  03_API_HARDENING.md  04_EMAIL_COMPLIANCE.md  05_CRM.md  06_DEPLOYMENT.md
src/: cli.py  config.py  constants.py  enums.py
tests/: conftest.py  test_ab_testing.py  test_adaptive_queue.py  test_campaigns.py  test_compliance.py  test_contact_scorer.py  test_conversations.py  test_crypto_research.py  test_database.py  test_deals.py  test_deduplication.py  test_deep_research.py  test_diversity.py  test_e2e_campaign_lifecycle.py  test_e2e_import.py  test_e2e_research.py  test_e2e_templates.py  test_email_sender.py  test_email_verifier.py  test_health_score.py  test_import_contacts.py  test_import_emails.py  test_inbox.py  test_llm_advisor.py  test_manual_contacts.py  test_metrics.py  test_models_and_app.py  test_multi_tenancy.py  test_newsletter.py  test_newsletters.py  test_normalization.py  test_phase3_lite.py  test_phase4_message_drafts.py  test_phone_utils.py  test_priority_queue.py  test_products.py  test_queue_commands.py  test_reply_detector.py  test_research_routes.py  test_response_analyzer.py  (+16 more)
(+261 files in other folders)
