[project]
name = "outreach-campaign"
version = "0.2.0"
description = "Multi-channel outreach campaign manager for crypto fund allocators"
requires-python = ">=3.12,<3.14"
dependencies = [
    "typer[all]>=0.12,<1.0",
    "jinja2>=3.1,<4.0",
    "thefuzz[speedup]>=0.22,<1.0",
    "python-levenshtein>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "markdown2>=2.4,<3.0",
    "premailer>=3.10,<4.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "tabulate>=0.9,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-api-python-client>=2.150,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "slowapi>=0.1.9,<1.0",
    "gunicorn>=22.0,<24.0",
    "sentry-sdk[fastapi]>=2.0,<3.0",
    "PyJWT>=2.8,<3.0",
    "bcrypt>=4.0,<5.0",
    "cryptography>=42.0,<45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "testing.postgresql>=1.3,<2.0",
    "ruff>=0.8,<1.0",
]
whatsapp = [
    "playwright>=1.49",
]

[project.scripts]
outreach = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
